--- a/SimpleWeather.UWP/Main/WeatherNow.xaml
+++ b/SimpleWeather.UWP/Main/WeatherNow.xaml
@@ -21,35 +21,6 @@
 
     <Page.Resources>
         <ResourceDictionary>
-            <Style
-                x:Key="NavigatableSectionStyle"
-                BasedOn="{StaticResource SectionLabelStyle}"
-                TargetType="toolkitControls:HeaderedContentControl">
-                <Style.Setters>
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    <Setter Property="HeaderTemplate">
-                        <Setter.Value>
-                            <DataTemplate>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <TextBlock Grid.Column="0" Text="{Binding}" />
-                                    <FontIcon
-                                        Grid.Column="1"
-                                        Margin="5,0,0,0"
-                                        HorizontalAlignment="Right"
-                                        VerticalAlignment="Center"
-                                        FontFamily="Segoe MDL2 Assets"
-                                        FontSize="12"
-                                        Glyph="&#xE76C;" />
-                                </Grid>
-                            </DataTemplate>
-                        </Setter.Value>
-                    </Setter>
-                </Style.Setters>
-            </Style>
             <SolidColorBrush x:Name="ForegroundColorBrush" Color="{ThemeResource TextFillColorPrimary}" />
             <helpers:DetailsItemGridFilterConverter x:Key="detailsFilter" />
             <ResourceDictionary.ThemeDictionaries>
@@ -519,6 +490,7 @@
                                             x:Name="AQIndexControl"
                                             x:Load="{x:Bind uwpUtils:FeatureSettings.AQIndex, Mode=OneWay}"
                                             DataContext="{x:Bind WeatherView.AirQuality, Mode=OneWay}"
+                                            Tapped="AQIndexControl_Tapped"
                                             Visibility="{x:Bind WeatherView.AirQuality, Mode=OneWay, Converter={StaticResource stringVisibilityConverter}}" />
                                         <localcontrols:PollenCountControl
                                             x:Name="PollenControl"
