--- a/SimpleWeather.UWP/Controls/PollenCountControl.xaml
+++ b/SimpleWeather.UWP/Controls/PollenCountControl.xaml
@@ -10,8 +10,7 @@
     xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     MinWidth="340"
     MinHeight="150"
-    d:DataContext="{d:DesignData Type=controls:PollenViewModel}"
-    d:DesignHeight="300"
+    d:DesignHeight="150"
     d:DesignWidth="400"
     mc:Ignorable="d">
 
@@ -27,7 +26,7 @@
             HorizontalContentAlignment="Stretch"
             VerticalContentAlignment="Stretch"
             Header="{helpers:StringRes Name='label_pollen_count'}"
-            Style="{StaticResource SectionLabelStyle}">
+            Style="{ThemeResource SectionLabelStyle}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -40,24 +39,28 @@
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <TextBlock
+                    x:Name="TreePollenLabel"
                     Grid.Row="0"
                     Grid.Column="0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
-                    FontSize="18"
+                    FontSize="16"
                     Style="{ThemeResource SubtitleTextBlockStyle}"
                     Text="{helpers:StringRes Name='label_pollen_tree'}" />
                 <TextBlock
+                    x:Name="TreePollenDescription"
                     Grid.Row="1"
                     Grid.Column="0"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     d:Foreground="{ThemeResource TextFillColorPrimaryBrush}"
+                    d:Text="Low"
                     FontSize="24"
                     Foreground="{x:Bind ViewModel.TreePollenDescriptionColor, Mode=OneWay, Converter={StaticResource color2solidConv}}"
                     Style="{ThemeResource CaptionTextBlockStyle}"
                     Text="{x:Bind ViewModel.TreePollenDescription, FallbackValue='&#x2014;', Mode=OneWay}" />
                 <TextBlock
+                    x:Name="GrassPollenLabel"
                     Grid.Row="0"
                     Grid.Column="1"
                     HorizontalAlignment="Center"
@@ -65,16 +68,19 @@
                     Style="{ThemeResource SubtitleTextBlockStyle}"
                     Text="{helpers:StringRes Name='label_pollen_grass'}" />
                 <TextBlock
+                    x:Name="GrassPollenDescription"
                     Grid.Row="1"
                     Grid.Column="1"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     d:Foreground="{ThemeResource TextFillColorPrimaryBrush}"
+                    d:Text="Low"
                     FontSize="24"
                     Foreground="{x:Bind ViewModel.GrassPollenDescriptionColor, Mode=OneWay, Converter={StaticResource color2solidConv}}"
                     Style="{ThemeResource CaptionTextBlockStyle}"
                     Text="{x:Bind ViewModel.GrassPollenDescription, FallbackValue='&#x2014;', Mode=OneWay}" />
                 <TextBlock
+                    x:Name="RagweedPollenLabel"
                     Grid.Row="0"
                     Grid.Column="2"
                     HorizontalAlignment="Center"
@@ -82,16 +88,48 @@
                     Style="{ThemeResource SubtitleTextBlockStyle}"
                     Text="{helpers:StringRes Name='label_pollen_ragweed'}" />
                 <TextBlock
+                    x:Name="RagweedPollenDescription"
                     Grid.Row="1"
                     Grid.Column="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     d:Foreground="{ThemeResource TextFillColorPrimaryBrush}"
+                    d:Text="High"
                     FontSize="24"
                     Foreground="{x:Bind ViewModel.RagweedPollenDescriptionColor, Mode=OneWay, Converter={StaticResource color2solidConv}}"
                     Style="{ThemeResource CaptionTextBlockStyle}"
                     Text="{x:Bind ViewModel.RagweedPollenDescription, FallbackValue='&#x2014;', Mode=OneWay}" />
             </Grid>
         </toolkitControls:HeaderedContentControl>
+        <VisualStateManager.VisualStateGroups>
+            <VisualStateGroup>
+                <VisualState x:Name="Mobile">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="0" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="TreePollenLabel.FontSize" Value="16" />
+                        <Setter Target="GrassPollenLabel.FontSize" Value="16" />
+                        <Setter Target="RagweedPollenLabel.FontSize" Value="16" />
+                        <Setter Target="TreePollenDescription.FontSize" Value="18" />
+                        <Setter Target="GrassPollenDescription.FontSize" Value="18" />
+                        <Setter Target="RagweedPollenDescription.FontSize" Value="18" />
+                    </VisualState.Setters>
+                </VisualState>
+                <VisualState x:Name="Desktop">
+                    <VisualState.StateTriggers>
+                        <AdaptiveTrigger MinWindowWidth="641" />
+                    </VisualState.StateTriggers>
+                    <VisualState.Setters>
+                        <Setter Target="TreePollenLabel.FontSize" Value="18" />
+                        <Setter Target="GrassPollenLabel.FontSize" Value="18" />
+                        <Setter Target="RagweedPollenLabel.FontSize" Value="18" />
+                        <Setter Target="TreePollenDescription.FontSize" Value="20" />
+                        <Setter Target="GrassPollenDescription.FontSize" Value="20" />
+                        <Setter Target="RagweedPollenDescription.FontSize" Value="20" />
+                    </VisualState.Setters>
+                </VisualState>
+            </VisualStateGroup>
+        </VisualStateManager.VisualStateGroups>
     </Grid>
 </UserControl>
